--- a/04.size/style.css
+++ b/04.size/style.css
@@ -1,3 +1,28 @@
+.inline {
+  display: inline;
+  background-color: skyblue;
+  /* width: 300px; */
+  /* height: 100px; */
+  /* padding: 24px; */
+  /* margin: 12px; */
+}
+.block {
+  display: block;
+  background-color: tomato;
+  /* width: 300px; */
+  /* height: 100px; */
+  /* padding: 24px; */
+  /* margin: 12px; */
+}
+.inline-block {
+  display: inline-block;
+  background-color: lime;
+  /* width: 300px; */
+  /* height: 100px; */
+  /* padding: 24px; */
+  /* margin: 12px; */
+}
+
 .box1 {
   border-radius: 4px;
   margin: 8px;
